--- a/boilerplate.yml
+++ b/boilerplate.yml
@@ -3,9 +3,16 @@ required_version: "~> 0.6"
 skip_files:
   - path: .git
   - path: .git/**/*
+  - path: .task
+  - path: .task/**/*
 
 hooks:
   after:
+    - dir: "{{ outputFolder }}"
+      command: mv
+      args:
+        - .gitignore.BOILERPLATE
+        - .gitignore
     - dir: "{{ outputFolder }}"
       command: mv
       args:
